[workspace]
members = [
    "airup-sdk",
    "airupd",
    "airup",
    "airupfx/airupfx",
    "airupfx/airupfx-io",
    "airupfx/airupfx-env",
    "airupfx/airupfx-fs",
    "airupfx/airupfx-process",
    "airupfx/airupfx-power",
    "airupfx/airupfx-signal",
    "airupfx/airupfx-time",
    "airupfx/airupfx-macros",
    "airupfx/airupfx-isolator",
    "airupfx/airupfx-extension",
    "extensions/airup-fallback-logger",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true

[workspace.dependencies.tokio]
version = "1"
features = ["fs", "sync", "net", "io-util", "signal", "rt", "time", "macros", "process"]
