[package]
name = "airup-eventsourced"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.10.0-alpha.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
ahash = "0.8"
airup-sdk = { path = "../airup-sdk", features = ["_internal"] }
anyhow = "1"
serde_json = "1"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
