[package]
name = "airup-sdk-ffi"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.6.0"
license = "MIT"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"