[package]
name = "airup-sdk"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.4.0-alpha.1"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
airupfx = { path = "../airupfx" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"
tokio = { workspace = true }
toml = "0.7"
thiserror = "1"