[package]
name = "airup-sdk"
authors = ["sisungo <sisungo@icloud.com>"]
description = "SDK library of Airup"
documentation = "https://docs.rs/airup-sdk"
repository = "https://github.com/sisungo/airup"
version = "0.10.7"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
_internal = ["tokio-1", "blocking", "ffi"]
ffi = ["blocking"]
blocking = []
nonblocking = []
tokio-1 = ["dep:tokio", "nonblocking"]

[dependencies]
cfg-if = "1"
ciborium = "0.2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["net", "fs", "io-util"], optional = true }
toml = "0.8"

[build-dependencies]
ciborium = "0.2"
serde_json = "1"
