[package]
name = "airup"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.4.0-alpha.1"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airup-sdk = { path = "../airup-sdk" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
console = "0.15"
tokio = { workspace = true }