[package]
name = "airup"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.10.7"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airup-sdk = { path = "../airup-sdk", features = ["_internal"] }
anyhow = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
console = "0.15"
mktemp = "0.5"
serde_json = "1"
