[package]
name = "airupd"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.5.0-alpha.1"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["simple_logger"]
simple_logger = ["rev_lines"]

[dependencies]
ahash = "0.8"
anyhow = "1"
async-trait = "0.1"
airupfx = { path = "../airupfx" }
airup-sdk = { path = "../airup-sdk", features = ["_internal"] }
libc = "0.2"
once_cell = "1"
rev_lines = { version = "0.3", optional = true }
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { workspace = true }
tokio-util = "0.7"
toml = "0.7"
tracing = "0.1"