[package]
name = "airupd"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.9.4"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fallback_logger", "cgroups"]
cgroups = ["airupfx/cgroups"]
fallback_logger = ["rev_lines"]
selinux = ["airupfx/selinux"]

[dependencies]
anyhow = "1"
async-broadcast = "0.7"
async-trait = "0.1"
airupfx = { path = "../airupfx/airupfx" }
airup-sdk = { path = "../airup-sdk", features = ["_internal"] }
libc = "0.2"
once_cell = "1"
rev_lines = { version = "0.3", optional = true }
serde_json = "1"
tokio = { workspace = true }
tracing = "0.1"