[package]
name = "airupd"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.10.7"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cgroups"]
cgroups = ["airupfx/cgroups"]
selinux = ["airupfx/selinux"]

[dependencies]
anyhow = "1"
async-broadcast = "0.7"
airupfx = { path = "../airupfx/airupfx" }
airup-sdk = { path = "../airup-sdk", features = ["_internal"] }
ciborium = "0.2"
libc = "0.2"
peg = "0.8"
thiserror = "1"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
