[package]
name = "airupfx"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.5.0-alpha.1"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
airup-sdk = { path = "../airup-sdk", features = ["_internal"] }
anyhow = "1"
cfg-if = "1"
libc = "0.2"
mini-moka = "0.10"
once_cell = "1"
shlex = "1.2"
sysinfo = { version = "0.29", features = ["serde"] }
thiserror = "1"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.3"