[package]
name = "airupfx-extension"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.10.8"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
airup-sdk = { path = "../../airup-sdk" }
airupfx-fs = { path = "../airupfx-fs" }
airupfx-signal = { path = "../airupfx-signal" }
ciborium = "0.2"
tokio = { workspace = true }
