[package]
name = "airupfx-extensions"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.10.0-rc.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
airup-sdk = { path = "../../airup-sdk" }
airupfx-fs = { path = "../airupfx-fs" }
ciborium = "0.2"
tokio = { workspace = true }
