[package]
name = "airupfx-extensions"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.10.6"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
airup-sdk = { path = "../../airup-sdk" }
airupfx-fs = { path = "../airupfx-fs" }
airupfx-signal = { path = "../airupfx-signal" }
ciborium = "0.2"
tokio = { workspace = true }
