[package]
name = "airupfx-isolator"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.8.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cgroups = ["cgroups-rs"]

[dependencies]
airupfx-time = { path = "../airupfx-time" }
cfg-if = "1"

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = { version = "0.3", optional = true }