[package]
name = "airupfx-power"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.10.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airupfx-process = { path = "../airupfx-process" }
async-trait = "0.1"
cfg-if = "1"
tokio = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"