[package]
name = "airupfx-process"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.8.1"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
cfg-if = "1"
airupfx-env = { path = "../airupfx-env" }
airupfx-io = { path = "../airupfx-io" }
libc = "0.2"
thiserror = "1"
tokio = { workspace = true }