[package]
name = "airupfx-signal"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.6.1"
edition = "2024"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
libc = "0.2"
tokio = { workspace = true }
