[package]
name = "airupfx"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.8.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cgroups = ["airupfx-isolator/cgroups"]

[dependencies]
airupfx-ace = { path = "../airupfx-ace" }
airupfx-env = { path = "../airupfx-env" }
airupfx-fs = { path = "../airupfx-fs" }
airupfx-isolator = { path = "../airupfx-isolator" }
airupfx-io = { path = "../airupfx-io" }
airupfx-power = { path = "../airupfx-power" }
airupfx-process = { path = "../airupfx-process" }
airupfx-signal = { path = "../airupfx-signal" }
airupfx-time = { path = "../airupfx-time" }
airupfx-macros = { path = "../airupfx-macros" }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
selinux = { version = "0.4", optional = true }