[package]
name = "airup-fallback-logger"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.10.8"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
airupfx = { path = "../../airupfx/airupfx" }
airup-sdk = { path = "../../airup-sdk", features = ["_internal"] }
anyhow = "1"
ciborium = "0.2"
rev_lines = "0.3"
serde_json = "1"
tokio = { workspace = true }
