[package]
name = "fallback-logger"
authors = ["sisungo <sisungo@icloud.com>"]
version = "0.10.2"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
airupfx = { path = "../../airupfx/airupfx" }
airup-sdk = { path = "../../sdks/rust", features = ["_internal"] }
anyhow = "1"
ciborium = "0.2"
rev_lines = "0.3"
serde_json = "1"
tokio = { workspace = true }
